--- a/notebook/src/Component/Noteslist/notes/notes.css
+++ b/notebook/src/Component/Noteslist/notes/notes.css
@@ -1,10 +1,16 @@
 .notes{
     border: 1px solid rgb(181, 120, 235);
     margin:15px;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding:10px;
     width: 150px;
     height: 150px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
 }
+
+.notes-flex{
+    display:flex;
+}
+
